@@ -1,6 +1,7 @@
 ext3grep-0.0.5
 
-	Use mmap(2) for the inode tables.
+	Added a configure option --enable-mmap to use mmap(2) for the inode tables.
+	PCH dependency problem was fixed.
 
 ext3grep-0.0.4
 
